# darkbook

./: .dockerignore  .env.example  .gitignore  Anchor.toml  Makefile  README.md  WHITEPAPER-Darkbook.md  birdeye-api-proof.json  eitherway.cookies.example.json  package.json
.cargo-vendor/anchor-attribute-access-control/: .cargo-checksum.json  .cargo_vcs_info.json  Cargo.toml
.cargo-vendor/anchor-attribute-account/: .cargo-checksum.json  .cargo_vcs_info.json  Cargo.toml
.cargo-vendor/anchor-attribute-constant/: .cargo-checksum.json  .cargo_vcs_info.json  Cargo.toml
.cargo-vendor/anchor-attribute-error/: .cargo-checksum.json  .cargo_vcs_info.json  Cargo.toml
.cargo-vendor/anchor-attribute-event/: .cargo-checksum.json  .cargo_vcs_info.json  Cargo.toml
dashboard/: next.config.ts  package.json  vercel.json
deck/: README.md  index.html  print.sh  style.css
investor/: INVESTOR-DECK.md  TOKENOMICS.md
monitoring/: INTEGRATION-NOTES.md  README.md  docker-compose.yml  prometheus.yml
papers/: WHITEPAPER-PRIVACY.md
programs/darkbook/: Cargo.toml  cargo-build-sbf-child-script-cargo.sh
programs/darkbook/src/: constants.rs  encrypt_bridge.rs  encrypt_cpi.rs  errors.rs  events.rs  ika_bridge.rs  lib.rs  matching_engine.rs  pyth.rs  state.rs
programs/darkbook/src/ix/: admin.rs  collateral.rs  funding.rs  ika.rs  matching.rs  mod.rs  orders.rs  positions.rs  settlement.rs
sdk/: package.json  tsconfig.json  tsup.config.ts
sdk/src/: ika.ts  (+12 more)
services/: docker-compose.yml  metrics.ts
tests/: bankrun-partial-sign-fix.ts  darkbook.ts  e2e-demo.ts  setup.ts  utils.ts
(+416 files in other folders)
